--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -193,6 +193,7 @@
             android:text="@string/kgs"
             android:textColor="#000000"
             android:textSize="40sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/community_pledge_total"
             app:layout_constraintTop_toTopOf="@+id/textView7" />
 
@@ -226,7 +227,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="10dp"
             android:text="@string/trees_planted_number"
             android:textColor="#000000"
             android:textSize="18sp"
@@ -278,8 +279,9 @@
 
                 <ImageView
                     android:id="@+id/otherIcon0"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/otherPledge0"
@@ -299,8 +301,9 @@
 
                 <ImageView
                     android:id="@+id/otherIcon1"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/otherPledge1"
@@ -320,8 +323,9 @@
 
                 <ImageView
                     android:id="@+id/otherIcon2"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/otherPledge2"
@@ -341,8 +345,9 @@
 
                 <ImageView
                     android:id="@+id/otherIcon3"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/otherPledge3"
@@ -362,8 +367,9 @@
 
                 <ImageView
                     android:id="@+id/otherIcon4"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center" />
 
                 <TextView
                     android:id="@+id/otherPledge4"
@@ -383,8 +389,9 @@
 
                 <ImageView
                     android:id="@+id/otherIcon5"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/otherPledge5"
@@ -404,8 +411,9 @@
 
                 <ImageView
                     android:id="@+id/otherIcon6"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/otherPledge6"
@@ -425,8 +433,9 @@
 
                 <ImageView
                     android:id="@+id/otherIcon7"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/otherPledge7"
