--- a/app/src/main/res/layout/fragment_view_meals.xml
+++ b/app/src/main/res/layout/fragment_view_meals.xml
@@ -17,13 +17,15 @@
             android:id="@+id/view_meal_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            style="@style/RectangleShortRounded">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/view_meal_page_title"
+                android:textStyle="bold"
                 android:textColor="#000000"
                 android:textSize="22sp"/>
             <Space
@@ -31,11 +33,26 @@
                 android:layout_height="wrap_content" />
 
             <Button
+                android:id="@+id/my_meals_button"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Go To My Meal"
+                android:text="@string/go_to_my_meals"
                 style="@style/NiceButton"/>
         </LinearLayout>
+
+        <Spinner
+            android:id="@+id/city_filter"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:entries="@array/city_array"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_meal_title" />
+
 
         <TextView
             android:id="@+id/meal_1_user"
@@ -86,12 +103,12 @@
             android:layout_width="240dp"
             android:layout_height="150dp"
             android:layout_marginStart="2dp"
-            android:layout_marginTop="15dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/box"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/meal_1_image"
-            app:layout_constraintTop_toBottomOf="@id/view_meal_title">
+            app:layout_constraintTop_toBottomOf="@+id/city_filter">
         </ImageView>
 
         <TextView
@@ -122,13 +139,25 @@
             app:layout_constraintTop_toBottomOf="@+id/meal_1_title">
         </TextView>
 
+        <TextView
+            android:id="@+id/meal_1_ingredient"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="Meal 1 Ingredient"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/meal_1_description_box"
+            app:layout_constraintEnd_toEndOf="@id/meal_1_description_box"
+            app:layout_constraintHorizontal_bias="0.3"
+            app:layout_constraintStart_toStartOf="@id/meal_1_description_box"/>
+
         <ImageView
             android:id="@+id/meal_2_description_box"
             android:layout_width="240dp"
             android:layout_height="150dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
             android:background="@drawable/box"
             app:layout_constraintEnd_toStartOf="@+id/meal_2_image"
             app:layout_constraintStart_toStartOf="parent"
@@ -162,6 +191,18 @@
             app:layout_constraintStart_toStartOf="@id/meal_2_description_box"
             app:layout_constraintTop_toBottomOf="@+id/meal_2_title">
         </TextView>
+
+        <TextView
+            android:id="@+id/meal_2_ingredient"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="Meal 2 Ingredient"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/meal_2_description_box"
+            app:layout_constraintEnd_toEndOf="@id/meal_2_description_box"
+            app:layout_constraintStart_toStartOf="@id/meal_2_description_box"/>
 
         <TextView
             android:id="@+id/meal_2_user"
@@ -292,6 +333,18 @@
             app:layout_constraintTop_toBottomOf="@+id/meal_3_title">
         </TextView>
 
+        <TextView
+            android:id="@+id/meal_3_ingredient"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="Meal 3 Ingredient"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/meal_3_description_box"
+            app:layout_constraintEnd_toEndOf="@id/meal_3_description_box"
+            app:layout_constraintStart_toStartOf="@id/meal_3_description_box"/>
+
         <ImageView
             android:id="@+id/meal_4_description_box"
             android:layout_width="240dp"
@@ -332,6 +385,18 @@
             app:layout_constraintStart_toStartOf="@id/meal_4_description_box"
             app:layout_constraintTop_toBottomOf="@+id/meal_4_title">
         </TextView>
+
+        <TextView
+            android:id="@+id/meal_4_ingredient"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="Meal 4 Ingredient"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/meal_4_description_box"
+            app:layout_constraintEnd_toEndOf="@id/meal_4_description_box"
+            app:layout_constraintStart_toStartOf="@id/meal_4_description_box"/>
 
         <TextView
             android:id="@+id/meal_4_user"
@@ -461,6 +526,18 @@
             app:layout_constraintStart_toStartOf="@id/meal_5_description_box"
             app:layout_constraintTop_toBottomOf="@+id/meal_5_title">
         </TextView>
+
+        <TextView
+            android:id="@+id/meal_5_ingredient"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="Meal 5 Ingredient"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/meal_5_description_box"
+            app:layout_constraintEnd_toEndOf="@id/meal_5_description_box"
+            app:layout_constraintStart_toStartOf="@id/meal_5_description_box"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
