--- a/app/src/main/res/layout/fragment_view_meals.xml
+++ b/app/src/main/res/layout/fragment_view_meals.xml
@@ -61,7 +61,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="First name Last Name"
+            android:text="@string/restaurant_name"
             android:textColor="#000000"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/meal_1_description_box"
@@ -117,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
-            android:text="Meal 1 Title"
+            android:text="@string/meal_name"
             android:textSize="25sp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="@id/meal_1_description_box"
@@ -132,7 +132,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:gravity="center"
-            android:text="Meal 1 Description"
+            android:text="@string/description_meal"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="@id/meal_1_description_box"
             app:layout_constraintStart_toStartOf="@id/meal_1_description_box"
@@ -145,7 +145,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:text="Meal 1 Ingredient"
+            android:text="@string/main_ingredient"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/meal_1_description_box"
             app:layout_constraintEnd_toEndOf="@id/meal_1_description_box"
@@ -170,7 +170,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
-            android:text="Meal 2 Title"
+            android:text="@string/meal_name"
             android:textSize="25sp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="@id/meal_2_description_box"
@@ -185,7 +185,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:gravity="center"
-            android:text="Meal 2 Description"
+            android:text="@string/description_meal"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="@id/meal_2_description_box"
             app:layout_constraintStart_toStartOf="@id/meal_2_description_box"
@@ -198,7 +198,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:text="Meal 2 Ingredient"
+            android:text="@string/main_ingredient"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/meal_2_description_box"
             app:layout_constraintEnd_toEndOf="@id/meal_2_description_box"
@@ -211,7 +211,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="First name Last name"
+            android:text="@string/restaurant_name"
             android:textColor="#000000"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -255,7 +255,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="First name Last Name"
+            android:text="@string/restaurant_name"
             android:textColor="#000000"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/meal_3_description_box"
@@ -311,7 +311,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
-            android:text="Meal 3 Title"
+            android:text="@string/meal_name"
             android:textSize="25sp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="@id/meal_3_description_box"
@@ -326,7 +326,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:gravity="center"
-            android:text="Meal 3 Description"
+            android:text="@string/description_meal"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="@id/meal_3_description_box"
             app:layout_constraintStart_toStartOf="@id/meal_3_description_box"
@@ -339,7 +339,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:text="Meal 3 Ingredient"
+            android:text="@string/main_ingredient"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/meal_3_description_box"
             app:layout_constraintEnd_toEndOf="@id/meal_3_description_box"
@@ -364,7 +364,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
-            android:text="Meal 4 Title"
+            android:text="@string/meal_name"
             android:textSize="25sp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="@id/meal_4_description_box"
@@ -379,7 +379,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:gravity="center"
-            android:text="Meal 4 Description"
+            android:text="@string/description_meal"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="@id/meal_4_description_box"
             app:layout_constraintStart_toStartOf="@id/meal_4_description_box"
@@ -392,7 +392,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:text="Meal 4 Ingredient"
+            android:text="@string/main_ingredient"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/meal_4_description_box"
             app:layout_constraintEnd_toEndOf="@id/meal_4_description_box"
@@ -405,7 +405,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="First name Last name"
+            android:text="@string/restaurant_name"
             android:textColor="#000000"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -447,7 +447,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="First name Last Name"
+            android:text="@string/restaurant_name"
             android:textColor="#000000"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/meal_5_description_box"
@@ -505,7 +505,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
-            android:text="Meal 5 Title"
+            android:text="@string/meal_name"
             android:textSize="25sp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="@id/meal_5_description_box"
@@ -520,7 +520,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:gravity="center"
-            android:text="Meal 5 Description"
+            android:text="@string/description_meal"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="@id/meal_5_description_box"
             app:layout_constraintStart_toStartOf="@id/meal_5_description_box"
@@ -533,7 +533,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:text="Meal 5 Ingredient"
+            android:text="@string/main_ingredient"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/meal_5_description_box"
             app:layout_constraintEnd_toEndOf="@id/meal_5_description_box"
