--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -60,7 +60,7 @@
 
             <RadioButton
                 android:id="@+id/pledge3"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:buttonTint="@color/themeGreen"
                 android:text="@string/pledge_radio_button_3"
@@ -69,7 +69,7 @@
 
             <RadioButton
                 android:id="@+id/pledge2"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:buttonTint="@color/themeGreen"
                 android:text="@string/pledge_radio_button_2"
@@ -78,7 +78,7 @@
 
             <RadioButton
                 android:id="@+id/pledge1"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:buttonTint="@color/themeGreen"
                 android:text="@string/pledge_radio_button_1"
@@ -87,7 +87,7 @@
 
             <RadioButton
                 android:id="@+id/pledge0"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:buttonTint="@color/themeGreen"
                 android:text="@string/pledge_radio_button_0"
