--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -79,7 +79,7 @@
             style="@style/RoundedFrame"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            android:text="@string/emission_split_text"
+            android:text="@string/result_emission"
             app:layout_constraintStart_toEndOf="@id/guideline1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/resultBarChart" />
@@ -92,7 +92,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="32dp"
-            android:text="@string/get_suggestion"
+            android:text="@string/result_get_suggestion"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
 
