--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -191,8 +191,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:hint="Description (200 words max.)"
-            android:maxLength="200"
+            android:hint="Description (150 characters max.)"
+            android:maxLength="150"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
